# BD-Chat-Multicanale

./: ChatMulticanale.sql  PROGETTOBASI.docx  ProgettoMYSQL.mwb  ProgettoMYSQL.mwb.bak  README.md  amministratore.c  capoprogetto.c  ~$OGETTOBASI.docx
ChatMultiC/: CMakeLists.txt  amministratore.c  capoprogetto.c  dipendente.c  main.c
ChatMultiC/support/: CMakeLists.txt  defines.h  inout.c  parse.c  utils.c  utils.h
ChatMultiC/users/: amministratore.json  capoprogetto.json  dipendente.json  login.json
Relazione/: ChatMulticanale.sql  PROGETTOBASI.docx
Relazione/Schema ER/: scheletro.drawio
